--- a/demo/src/main/resources/templates/user.html
+++ b/demo/src/main/resources/templates/user.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Form Result</title>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 
 <body>
